--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,7 +8,8 @@
     <title>Domotics - WebSockets</title>
     <script src="./socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="./assets/css/domotica.css" type="text/css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -18,43 +19,47 @@
     onload="showSection('Luces')"
     <% } %>
     >
+    
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav" id="menu">
+            <% if(user.local.role == "ROLE_ADMIN") { %>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Admin</a>
+                </li>
+            <% } %>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Luces</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">LiveStream</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Registro</a>
+                </li>
+            </ul>
+
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a href="#">
+                        <span class="glyphicon glyphicon-user"></span> Perfil</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/logout">
+                        <span class="glyphicon glyphicon-log-in"></span> Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Home</a>
-                </div>
-                <ul class="nav navbar-nav" id="menu">
-                    <% if(user.local.role == "ROLE_ADMIN") { %>
-                    <li>
-                        <a href="#">Admin</a>
-                    </li>
-                    <% } %>
-                    <li>
-                        <a href="#">Luces</a>
-                    </li>
-                    <li>
-                        <a href="#">LiveStream</a>
-                    </li>
-                    <li>
-                        <a href="#">Registro</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#">
-                            <span class="glyphicon glyphicon-user"></span> Perfil</a>
-                    </li>
-                    <li>
-                        <a href="/logout">
-                            <span class="glyphicon glyphicon-log-in"></span> Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
         <div class="page-header text-center">
-            <h1>
-                <span class="fa fa-home"></span> Dashboard</h1>
+            <h1><span class="fa fa-home"></span> Dashboard</h1>
         </div>
 
         <% if(user.local.role == "ROLE_ADMIN") { %>
@@ -67,7 +72,7 @@
             </div>
             <div clas="row ">
                 <div clas="well col-md-6">
-                    <table class="table table-striped" style="width:70%">
+                    <table class="table table-striped">
                         <thead class="thead-dark">
                             <tr>
                                 <th>Email</th>
@@ -134,11 +139,10 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script> -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
     <script src="./assets/scripts/script.js"></script>
     <script>
-
         $("#menu a").click(function() {
             showSection(this.innerHTML);
         });
