Add sound alerts for lights

--- a/public/assets/css/domotica.css
+++ b/public/assets/css/domotica.css
@@ -1,7 +1,7 @@
 #preview {
     display: none;
 }
-
+/*
 [id='0']{
     position: absolute;
    top: 30%;
@@ -25,4 +25,4 @@ position: absolute;
 top: 25%;
 left: 25%;
 width: 500px;
-}
+}*/
