--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -121,16 +121,37 @@
                 <p>sección luces</p>
                 
                 <input class="colorPicker" id="CP1" type="color" value="#ffffff">
-                
+                <audio id="colorChange">
+                    <source src="/assets/sounds/colorChange.mp3" type="audio/mp3">
+                </audio>
+
                 <div id="temp"></div>
 
             </div>
 
             <div class="portrait col-md-8">
                 <img src="/assets/images/classroom.jpg" class="image">
-                <button id="0" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">Luz1</button>
-                <button id="1" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">luz2</button>
-                <button id="2" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">luz3</button>
+                <button id="0" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">Luz 1</button>
+                <audio id="soundON0">
+                    <source src="/assets/sounds/lucesON0.mp3" type="audio/mp3">
+                </audio>
+                <audio id="soundOFF0">
+                    <source src="/assets/sounds/lucesOFF0.mp3" type="audio/mp3">
+                </audio>
+                <button id="1" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">Luz 2</button>
+                <audio id="soundON1">
+                    <source src="/assets/sounds/lucesON1.mp3" type="audio/mp3">
+                </audio>
+                <audio id="soundOFF1">
+                    <source src="/assets/sounds/lucesOFF1.mp3" type="audio/mp3">
+                </audio>
+                <button id="2" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">Luz 3</button>
+                <audio id="soundON2">
+                    <source src="/assets/sounds/lucesON2.mp3" type="audio/mp3">
+                </audio>
+                <audio id="soundOFF2">
+                    <source src="/assets/sounds/lucesOFF2.mp3" type="audio/mp3">
+                </audio>
             </div>
             
         </div>
